--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -1,4 +1,5 @@
 {{define "scripts"}}
-    <script src="/scripts/script.js"></script>
-    <script src="/scripts/loginMessage.js"></script>
+<script src="/scripts/script.js"></script>
+<script src="/scripts/loginMessage.js"></script>
+<script src="/scripts/notifications.js"></script>
 {{end}}
