--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,24 +1,34 @@
 {{define "footer"}}
-<footer>
+<footer class="text-white p-4 mt-auto">
   <p>&copy; 2024 Projekt Biblioteka. Wszelkie prawa zastrzeżone.</p>
   <nav>
-    <ul>
+    <ul class="flex justify-center space-x-4">
       <li>
         <a
           href="https://www.termsfeed.com/live/74296f89-391d-4c6f-b41e-b027afb59052"
           target="_blank"
+          class="text-blue-400 hover:underline"
           >Polityka prywatności</a
         >
       </li>
-      <li><a href="#" id="contact-link">Kontakt</a></li>
+      <li>
+        <a href="#" id="contact-link" class="text-blue-400 hover:underline"
+          >Kontakt</a
+        >
+      </li>
     </ul>
   </nav>
 
-  <!--Kontakt-->
-  <div id="contact-popup" class="popup">
-    <div class="popup-content">
-      <span class="close-btn">&times;</span>
-      <h2>Kontakt</h2>
+  <!-- Kontakt -->
+  <div
+    id="contact-popup"
+    class="popup hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+  >
+    <div class="popup-content bg-white p-4 rounded-lg">
+      <span class="close-btn text-red-500 font-bold cursor-pointer"
+        >&times;</span
+      >
+      <h2 class="text-xl font-bold mb-2">Kontakt</h2>
       <p>Email: kontakt@biblioteka.pl</p>
       <p>Telefon: +48 123 456 789</p>
     </div>
